# zipline

./: .git-blame-ignore-revs  .gitignore  .travis.yml  CHANGELOG.md  README.ktbridge.md  README.md  RELEASING.md  TROUBLESHOOTING.md  build.gradle  build.gradle.kts  build_mac  gradle.properties  gradlew  javascript.keystore  lint.xml  local.properties.template  renovate.json5  settings.gradle  settings.gradle.kts  update_duktape.sh  update_octane.sh  update_quickjs.sh  upload-pom.xml  upload.sh
.buildscript/: deploy_snapshot.sh  settings.xml
app/: build.gradle
buildSrc/: build.gradle.kts
duktape/: build.gradle  consumer-proguard-rules.pro  gradle-mvn-push.gradle  gradle.properties
gradle/: libs.versions.toml
ktbridge/: README.md  build.gradle  build.gradle.kts  gradle.properties
quickjs/: README.md  build.gradle  build.gradle.kts  gradle.properties
quickjs-gradle-plugin/: build.gradle.kts  gradle.properties
quickjs-kotlin-plugin/: build.gradle.kts  gradle.properties
quickjs/jvm/: CMakeLists.txt  build.gradle  build.gradle.kts  gradle.properties
quickjs/jvm/src/main/java/app/cash/quickjs/: QuickJsNativeLoader.java
sample-octane/: build.gradle  build.gradle.kts
samples/: build.gradle.kts  gradle.properties  settings.gradle
tests/: build.gradle
zipline-api-validator/: build.gradle.kts
zipline-bytecode/: build.gradle.kts
zipline/src/jvmMain/: .gitignore  CMakeLists.txt
zipline/src/jvmMain/kotlin/app/cash/zipline/: QuickJsNativeLoader.kt  ZiplineFile.kt
zipline/src/jvmMain/kotlin/app/cash/zipline/internal/: HostConsole.kt  LogJvm.kt  platformJvm.kt
zipline/src/jvmMain/resources/: .gitignore
(+2886 files in other folders)
